@@ -1,5 +1,9 @@
 2013-01-14  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
+	* fix paragraphs in help window
+
+2013-01-14  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
 	* support for bullets and braces
 	* protocol change to version 3
 	  - change proof-finished into branch-finished and adapt
